# wed_r

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml  deploy_prod.yml  deploy_test.yml  rust.yml
migrations/2024-12-27-172723_users/: down.sql  up.sql
migrations/2025-01-29-172131_users/: up.sql
migrations/2025-02-07-172027_users/: down.sql  up.sql
migrations/2025-02-08-164339_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/commands/: handler.rs  mod.rs
src/commands/common/: handler.rs  mod.rs
src/commands/menu/: handler.rs  mod.rs
src/config/: mod.rs
src/config/database/: migration.rs  mod.rs  pool.rs  utils.rs
src/database/: mod.rs
src/database/user/: database.rs  mod.rs  model.rs  tests.rs
src/handlers/: handler.rs  mod.rs  state.rs
src/handlers/admin_menu/: handler.rs  mod.rs
src/handlers/callbacks/: handler.rs  mod.rs
src/handlers/common/: handler.rs  mod.rs
src/handlers/common_commands/: handler.rs  mod.rs
src/handlers/menu/: handler.rs  mod.rs  tests.rs
src/repository/: mod.rs  model.rs  respository.rs  tests.rs
src/repository/admin/: mod.rs  model.rs  repository.rs  tests.rs
src/repository/user/: mod.rs  model.rs  repository.rs  tests.rs
src/routes/: callback_invite_query.rs  command_help.rs  command_invite.rs  command_open_main_menu.rs  command_start.rs  mod.rs  model.rs  tests.rs
src/routes/admin/: mod.rs
src/routes/admin/create_user/: mod.rs
src/routes/admin/remove_user/: mod.rs
src/routes/messages/: mod.rs
src/routes/start/: mod.rs  tests.rs
src/utils/: keyboard_buttons.rs  mod.rs
(+2 files in other folders)
