[package]
name = "wed_r"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.12"
# tg bot
teloxide = { version = "0.13", features = ["macros"] }
teloxide_tests = { version = "0.2" }
# database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
# qr code
qrcodegen = "1.8.0"
image = "0.24"
# common
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
serde_json = "1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde = { version = "1.0.216", features = ["derive"] }
